# aruco-marker-detection

./: LICENSE  README.md
Media/ArUco_markers/: aruco_markers.docx
aruco_marker_depthai/: CMakeLists.txt  nodelet_plugins.xml  package.xml
aruco_marker_depthai/include/: SpatialDetectionConverterEx.hpp
aruco_marker_depthai/launch/: aruco_marker_detector.py  camera_location_multiple.launch.py  camera_location_singular.launch.py  marker_detector_own_pipeline.launch.py  my_yolov4_publisher_ex.launch.py  publish_bouding_boxes.launch.py  publish_tf.launch.py  stereo.launch.py  stereo_circle_detector.launch.py  stereo_marker_detector.launch.py  stereo_marker_location.launch.py  stereo_marker_pose.launch.py  test_marker_orientation.launch.py  test_multiple_camera_locations_multiple_markers.launch.py  yolo_spatial_detector_node.launch.py
aruco_marker_depthai/launch/classes/: Camera.py
aruco_marker_depthai/launch/classes/enums/: Positions.py
aruco_marker_depthai/resources/: SimpleFruitsv1iyolov5pytorch.json  simplefruits_V1.blob  simplefruits_V1.txt  simplefruitsv1iyolov7pytorch.json
aruco_marker_depthai/rviz/: spatialDetections.rviz  stereoCameraLocation.rviz  stereoCameraLocationSingular.rviz  stereoDetectedMarkersDetectorPointCloud.rviz  stereoInputOnly.rviz  stereoMarkerLocation.rviz  stereoPointCloud.rviz
aruco_marker_depthai/scripts/: aruco_location.py  aruco_pose_node.py  camera_location_multiple_markers.py  camera_location_multiple_markers_multi_cameras.py  camera_location_singular_marker.py  circle_detector.py  marker_detector.py  marker_detector_own_pipeline.py  marker_orientation_tester.py  publisch_bouding_boxes.py  publisch_tf.py  workspace_from_markers.py
aruco_marker_depthai/scripts/camera_calibration/: README.md  chessboard_camera_calibration.py  chessboard_corner_detection.py  oakd_camera_capture_script.py  undistort_camera_images.py
aruco_marker_depthai/scripts/camera_calibration/calibration_values/: calibration_chessboard.yaml  camera_calibration_example.txt  open_pickle_file.py  open_yaml_file.py  pickle_to_yaml.py
aruco_marker_depthai/scripts/camera_calibration_tests/: calibration_values_oakd.txt  chessboard_camera_calibration.py  draw_corners.py  oakd_camera_capture.py  oakd_camera_capture_script.py
aruco_marker_depthai/scripts/camera_calibration_tests/calibration_values/: camera_calibration_pickle_file.pkl  open_pickle_file.py  open_yaml_file.py
aruco_marker_depthai/src/: SpatialDetectionConverterEx.cpp  stereo_publisher.cpp  yolo_spatial_detector_node OK.cpp  yolo_spatial_detector_node.cpp
